# libmacaroon

./: .gitignore  Cargo.toml  ChangeLog.md  README.md
.github/workflows/: main.yml
examples/: wasm_example.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: deserialize.rs  deserialize_binary.rs
src/: caveat.rs  error.rs  lib.rs  verifier.rs
src/crypto/: mod.rs  rustcrypto.rs  sodiumoxide.rs
src/serialization/: macaroon_builder.rs  mod.rs  v1.rs  v2.rs  v2json.rs
tests/: compat_libmacaroons.rs  compat_macarooncompat.rs  compat_pymacaroons.rs  proptest_roundtrip.rs
