[package]
name = "macaroon"
version = "0.3.1-dev.0"
edition = "2021"
rust-version = "1.56"
authors = ["Jack Lund <jackl@geekheads.net>", "macaroon-rs Contributors"]
description = "Fully functional implementation of macaroons in Rust"
documentation = "https://docs.rs/macaroon"
repository = "https://github.com/macaroon-rs/macaroon"
keywords = ["macaroon", "cookies", "authorization", "credentials"]
categories = ["authentication", "cryptography"]
license = "MIT"

[features]
default = []
wasm = ["getrandom/js"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"

# Crypto (RustCrypto ecosystem — pure Rust, WASM-compatible)
hmac = "0.12"
sha2 = "0.10"
xsalsa20poly1305 = "0.9"
rand = "0.8"
getrandom = "0.2"

[dev-dependencies]
env_logger = "0.9"
time = { version = "0.3", features = ["parsing"] }
